# guile-mathematica

./: README.md  configure.ac
src/: Makefile.am  mathematica.nw
